Bug 1697721 - Have nsLocalFile::CreateAllAncestors make each path component. r=xpcom-reviewers,kmag

Some systems hide path components. Determine access by creating the whole path.

Differential Revision: https://phabricator.services.mozilla.com/D107970